Make scene jumps obvious (Fixes #4)

--- a/source/styles/screen.styl
+++ b/source/styles/screen.styl
@@ -491,6 +491,32 @@ input, textarea {
     a:hover {
 	      text-decoration: underline;
     }
+    hr {
+        border: none
+        margin: 2em auto
+        width: 30%
+        text-align: center
+        color: #e3e6e9
+        position: relative
+
+        &:before {
+            font-family: Typicons
+            content: "\e0b1  \e0b1  \e0b1"
+            background: #f3f3f3
+            display: inline-block;
+            padding: 0 0.8em;
+        }
+        &:after {
+            position: absolute
+            width: 100%
+            height: 1px
+            background: #e3e6e9
+            content: ""
+            left: 0px
+            top: 50%
+            z-index: -1
+        }
+    }
 
 }
 .editor-container {
